# rust-oauth-server

./: .gitignore  LICENSE  README.md
app/: Cargo.toml
app/src/: config.rs  main.rs
app/src/application/dtos/: user_dto.rs
app/src/application/use_cases/: mod.rs  user_use_cases.rs
app/src/domain/: mod.rs
app/src/domain/entities/: user.rs
app/src/domain/repositories/: user_repository.rs
app/src/domain/services/: user_service.rs
app/src/infrastructure/db/: connection.rs  mod.rs  schema.rs
app/src/infrastructure/db/repositories/: diesel_user_repository.rs  mod.rs
app/src/infrastructure/http/: routes.rs
app/src/infrastructure/http/handlers/: user_handlers.rs
local-infra/: .env-local  docker-compose.yml
misc/: OAuthServer.sql  database.dmm
