[package]
name = "rust-users-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.10.2"
diesel = { version = "2.2.9", features = ["postgres", "r2d2", "uuid", "chrono"] }
diesel_migrations = "2.2.0"
dotenv = "0.15.0"
env_logger = "0.11.8"
log = "0.4.27"
r2d2 = "0.8.10"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
uuid = { version = "1.16.0", features = ["serde", "v4"] }
chrono = { version = "0.4.40", features = ["serde"] }
bcrypt = "0.17"
futures = "0.3.31"
thiserror = "2.0.12"
async-trait = "0.1.88"
derive_more = "2.0.1"
mockall = "0.13.1"